apps/cxs-onenote-auth/base/cxs-onenote-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cxs-onenote-auth
  labels:
    app: cxs-onenote-auth
    tier: api
  annotations:
    tailscale.com/expose: "true"
spec:
  type: NodePort
  ports:
    - port: 8000
  selector:
    app: cxs-onenote-auth
    tier: api
