apps/cxs-onenote-auth/base/cxs-onenote-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-onenote-auth
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: onenote.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cxs-onenote-auth
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - onenote.contextsuite.com
      secretName: onenote-contextsuite-com-tls
